--- a/01-Article-Preview-Component/index.html
+++ b/01-Article-Preview-Component/index.html
@@ -1,36 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Article preview component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>Frontend Mentor | Article preview component</title>
+  </head>
+  <body>
+    <main>
+      <article>
+        <h1 class="article__title">
+          Shift the overall look and feel by adding these wonderful touches to
+          furniture in your home
+        </h1>
+        <p class="article__description">
+          Ever been in a room and felt like something was missing? Perhaps it
+          felt slightly bare and uninviting. I’ve got some simple tips to help
+          you make any room feel complete.
+        </p>
+        <footer class="article__info">
+          <span class="article__info-name">Michelle Appleton</span>
+          <span class="article__info-date">28 Jun 2020</span>
+        </footer>
+        <aside class="article__socials-icon">
+          <span>Share</span>
+          <span><img src="./images/icon-share.svg" alt="Share" /></span>
+          <div class="socials__icon">
+            <span class="socials__icon socials__icon--facebook"
+              ><img src="./images/icon-facebook.svg" alt="Facebook"
+            /></span>
+            <span class="socials__icon socials__icon--twitter"
+              ><img src="./images/icon-twitter.svg" alt="Twitter"
+            /></span>
+            <span class="socials__icon socials__icon--pinterest"
+              ><img src="./images/icon-pinterest.svg" alt="Pinterest"
+            /></span>
+          </div>
+        </aside>
+      </article>
+    </main>
+    <footer class="attribution">
+      Challenge by
+      <a
+        href="https://www.frontendmentor.io/challenges/article-preview-component-dYBN_pYFT/hub"
+        target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://github.com/aakashRao-dev/" target="_blank">Aakash Rao</a
+      >.
+    </footer>
+  </body>
 </html>
